--- a/css/themes/dont/dont.css
+++ b/css/themes/dont/dont.css
@@ -79,7 +79,7 @@ footer {
   clear: both;
 }
 nav {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   height: 24px;
@@ -87,6 +87,7 @@ nav {
   font-size: 80%;
   border-radius: 0 0 0 8px;
   background: #d60b15;
+  z-index: 10;
   background: linear-gradient(top, #f53942 20%, #d60b15 100%), #d60b15;
   background: -webkit-linear-gradient(top, #f53942 20%, #d60b15 100%), #d60b15;
   background: -moz-linear-gradient(top, #f53942 20%, #d60b15 100%), #d60b15;
