--- a/css/themes/skin/skin.css
+++ b/css/themes/skin/skin.css
@@ -79,7 +79,7 @@ footer {
   clear: both;
 }
 nav {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   height: 24px;
@@ -87,6 +87,7 @@ nav {
   font-size: 80%;
   border-radius: 0 0 0 8px;
   background: #354468;
+  z-index: 10;
   background: linear-gradient(top, #4f659b 20%, #354468 100%), #354468;
   background: -webkit-linear-gradient(top, #4f659b 20%, #354468 100%), #354468;
   background: -moz-linear-gradient(top, #4f659b 20%, #354468 100%), #354468;
